Added Expanse service, expanse controller, expanse viewmodels

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ExpanseTracker-7b76fd40-8e4e-4deb-b012-1ef48fe22590;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
+  "EmailSettings": {
+    "Server": "localhost",
+    "Port": "25",
+    "DefaultEmailAdress" : "no-replay@localhost.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
